spacing fix

--- a/css/glanz_style.css
+++ b/css/glanz_style.css
@@ -4847,7 +4847,7 @@ footer {
 		width: 100%;
 	}
 	.gla_subtitle {
-		margin-top: -40px;
+		margin-top: 40px;
 		margin-bottom: 40px;
 	}
 	.gla_port_icons {
